Update media queries, fix responsiveness bugs of website on smaller screens, update styling on Homepage, Contact page and Why Donate page, update navbar and footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,6 @@ h1 {
     color: white;
     font-family: Noto Sans JP;
     font-size: 4em;
-    padding-top: 1150px;
-
 }
 
 hr {
@@ -18,8 +16,8 @@ hr {
 
 /*---------------------------- Navigation Bar ----------------------------*/
 .navbar {
-    background-color: rgba(0, 0, 0, 0.8);
-    height: 60px;
+    background-color: rgba(0, 0, 0, 1);
+    height: 83px;
 }
 
 .navbar-logo {
@@ -28,6 +26,10 @@ hr {
     font-size: 50px;
     text-decoration: none;
     letter-spacing: 3px;
+}
+
+.navbar-logo:hover {
+    color: #80d6e6;
 }
 
 .nav-link {
@@ -58,7 +60,7 @@ hr {
 
 .hero-image {
     height: 100vh;
-    background: url('../images/kids2.jpg') no-repeat bottom right fixed;
+    background: url('../images/hero-kids.jpg') no-repeat bottom right fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -78,8 +80,21 @@ hr {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+.onep-hero {
+    font-family: Fresca;
+    font-size: 20vw;
+    color: rgba(255,255,255,0.4);
+    text-align: center;
+    margin: 170px 0px 170px 0px;
+}
+
+.hero-phrase {
+    font-size: 3vw;
+}
+
 .author {
     color: white;
+    font-size: 1vw;
 }
 
 /*---------------------------- ONE% Section ----------------------------*/
@@ -126,6 +141,18 @@ hr {
     
 }
 
+.card-deck .card {
+	min-width: 240px;
+    border-radius: 25px;
+    background-color: white;
+}
+
+.fact2 {
+    padding: 50px 50px 100px 50px;
+    margin: 20px;
+    min-width: 240px;
+}
+
 .fa-arrow-circle-right {
     color: black;
 }
@@ -157,7 +184,11 @@ hr {
 .form {
     max-width: 1000px;
     margin: auto;
-    padding: 120px 80px 370px 80px;
+    padding: 40px 25px 100px 25px;
+    background-color: white;
+    margin-top: 200px;
+    border-radius: 25px;
+    border: #57BC90ff solid 4px;
 }
 
 .btn-outline-dark {
@@ -167,6 +198,20 @@ hr {
 
 .btn-outline-dark:hover {
     background-color:  white;
+}
+
+.btn-send {
+    color: white !important;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.btn-send:hover {
+    color: black !important;
+    background-color: white;
+}
+
+.form-control {
+    border: 1px solid #57BC90ff;
 }
 
 /*---------------------------- Water Project Page ----------------------------*/
@@ -197,8 +242,8 @@ hr {
 }
 
 .btn-donate {
-    color: white !important;
-    background-color: rgba(0, 0, 0, 0.8) !important;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.8);
     min-width: 110px;
     padding: 20px;
     display: flex;
@@ -206,8 +251,8 @@ hr {
 }
 
 .btn-donate:hover {
-    color: black !important;
-    background-color: white !important;
+    color: black;
+    background-color: white;
     padding: 20px;
     display: flex;
     justify-content: center;
@@ -234,6 +279,19 @@ hr {
 }
 
 /*---------------------------- Footer ----------------------------*/
+
+.footer {
+    padding: 20px;
+    background-color: black;
+}
+
+.social-media {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 41%;
+    margin: auto;
+}
 
 .media-icon {
     color: white;
@@ -277,10 +335,10 @@ hr {
   content: '';
   position: absolute;
   border: #57BC90ff solid 4px;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  top: -4px;
+  right: -4px;
+  bottom: -4px;
+  left: -4px;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-property: top, right, bottom, left;
@@ -418,6 +476,48 @@ hr {
 
 /*---------------------------- Media Queries ----------------------------*/
 
+@media only screen and (max-width: 1199px) {
+    .fact2 {
+        padding: 50px 25px 100px 25px;
+    }
+    
+    .hero-phrase {
+        font-size: 4vw;
+    }
+
+    .author {
+        font-size: 1.5vw;
+    }
+}
+
+@media only screen and (max-width: 991px) {
+    .humanity-fact {
+        width: 650px !important;
+    }
+
+    .onep-hero {
+        font-size: 30vw;
+    }
+    
+    .hero-phrase {
+        font-size: 4vw;
+    }
+
+.author {
+        font-size: 1.5vw;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .social-media {
+        width: 90%;
+    }
+
+    .fact2 {
+    padding: 50px 18px 100px 18px;
+    }
+}
+
 @media only screen and (max-width: 575px) {
     .navbar {
         height: 70px;
@@ -428,58 +528,42 @@ hr {
 
     }
 
-    .form {
-        padding: 100px 80px 100px 80px;
+    .hero-phrase {
+    font-size: 5vw;
     }
 
-}
-
-@media only screen and (max-width: 991px) {
-   .humanity-fact {
-       width: 650px !important;
-   }
-
-}
-
-@media only screen and (max-width: 768px) {
-    .form {
-        padding: 100px 80px 200px 80px;
+    .author {
+    font-size: 2vw;
     }
 
+    .flip-card-back {
+    padding: 20px 10px 40px 10px;
+    }
 }
 
 @media only screen and (max-width: 410px) {
     
     .onep {
         width: 300px;
-        
     }
 
     .why-donate-cards {
-    width: 340px;
-    height: 425px;
-    margin: auto;
+        width: 340px;
+        height: 425px;
+        margin: auto;
     }
 
     .flip-card {
-  width: 340px;
-  height: 425px;
-  margin: auto;
+        width: 340px;
+        height: 425px;
+        margin: auto;
     }
 
-}
+    .hero-phrase {
+    font-size: 5vw;
+    }
 
-/* TESTINT */
-
-.card-deck .card {
-	min-width: 240px;
-    border-radius: 25px;
-    background-color: white;
-}
-
-.fact2 {
-    
-    padding: 50px 50px 100px 50px;
-    margin: 20px;
-    min-width: 240px;
+    .author {
+    font-size: 3vw;
+    }
 }
